Undo overflow fix for just content and apply fix to all parts of status

--- a/style/_layout.scss
+++ b/style/_layout.scss
@@ -48,6 +48,7 @@ main>section {
 
 .status .content {
   white-space: pre-wrap;
+  overflow-wrap: break-word;
 }
 
 .view-status {
